# echolalia

./: LICENSE  README.md  config.ini  echolalia.py  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/workflows/: python.yml
echolalia/: __main__.py  generator.py
echolalia/formatter/: csver.py  jsoner.py  rawer.py  xmler.py  yamler.py
echolalia/writer/: couchdb.py  file.py  stdout.py
templates/: access_logs.json  people.json
tests/: test_generator.py
tests/formatter/: test_csver.py  test_jsoner.py  test_rawer.py  test_xmler.py  test_yamler.py
tests/writer/: test_file.py  test_stdout.py
