[project]
name = "echolalia"
version = "0.1.0"
description = "Generate random data"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12"
dependencies = [
    "faker>=24.0.0",
    "pyyaml>=6.0",
]

[project.scripts]
echolalia = "echolalia.__main__:main"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["echolalia"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=echolalia --cov-report=term-missing"

[tool.coverage.run]
source = ["echolalia"]

[tool.coverage.report]
show_missing = true
